--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-# output folder
-resources/data/out/*
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
-!**/__pycache__/
 *.py[cod]
 *$py.class
-
-*.pyc
 
 # C extensions
 *.so
@@ -26,7 +20,6 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
@@ -56,6 +49,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -78,6 +72,7 @@ instance/
 docs/_build/
 
 # PyBuilder
+.pybuilder/
 target/
 
 # Jupyter Notebook
@@ -88,7 +83,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
+# .python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -134,5 +131,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# IDE ignore
-.vscode
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
