--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ resources/data/out/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
-src/view/__pycache__
+src/view/__pycache__/*.pyc
 
 *.py[cod]
 *$py.class
